--- a/tests/docker/BUILD
+++ b/tests/docker/BUILD
@@ -361,8 +361,7 @@ docker_push_all(
 [container_test(
     name = "test_dockerfile_image_%s" % driver,
     configs = ["//tests/docker/configs:dockerfile_image.yaml"],
-    driver = "tar",
-    image = "@dockerfile_%s//image:dockerfile_image" % driver,
+    image = "@dockerfile_%s//image:dockerfile_image.tar" % driver,
 ) for driver in [
     "docker",
     "kaniko_latest",
